--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,14 @@
-    [tool.poetry.dependencies]
-    python = "^3.10"
+[tool.poetry]
+name = "payment-pred-app"
+version = "0.1.0"
+description = ""
+authors = ["Your Name <your@email.com>"]
+
+[tool.poetry.dependencies]
+python = "^3.10"
+flask = "^3.1.1"
+scikit-learn = "^1.3.2"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
